--- a/src/components/navbar/navbar.css
+++ b/src/components/navbar/navbar.css
@@ -21,3 +21,40 @@ body {
     transition: all .5 ease-in-out;
     border: 3px solid #fff;
 }
+.menu-btn_burger{
+    width: 50px;
+    height: 6px;
+    background: #fff;
+    border-radius: 5px;
+    box-shadow: 0 2px 5px darkgray;
+    transition: all .5s ease-in-out;
+}
+.menu-btn_burger::before,
+.menu-btn_burger::after{
+    content: '';
+    position: absolute;
+    width: 50px;
+    height: 6px;
+    background-color: white;
+    border-radius: 5px;
+    transition: all .5s ease-in-out;
+}
+.menu-btn_burger::before {
+    transform: translateY(-16px);
+}
+.menu-btn_burger::after {
+    transform: translateY(16px);
+}
+
+/* Hamburger Animation */
+.menu-btn.open .menu-btn_burger {
+    transform: scaleZ(-50px);
+    background: transparent;
+}
+.menu-btn.open .menu-btn_burger::before {
+    transform: rotate(45deg)
+}
+.menu-btn.open .menu-btn_burger::after {
+    transform: rotate(-45deg)
+}
+
