--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,3 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+body{
+  background-image: url("https://www.google.com/url?sa=i&url=https%3A%2F%2Fwww.businessinsider.com%2Fjellyfish-photos-facts-wild-pictures-2019-10&psig=AOvVaw05Fg8nhUXdGQc2ioeWUtAJ&ust=1598213304193000&source=images&cd=vfe&ved=0CAIQjRxqFwoTCMi-jNTOr-sCFQAAAAAdAAAAABAD");
 }
