--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,5 @@
 body {
+  background: #272727;
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
@@ -11,3 +12,15 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+/* *{
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+} */
+
+  /* display: flex; */
+  /* justify-content: left; */
+  /* align-items: top; */
+  /* min-height: 100vh; */
+
