added image to the background of the contact me form, added in resume

--- a/src/components/navbar/navbar.css
+++ b/src/components/navbar/navbar.css
@@ -1,5 +1,12 @@
 
-
+.nicole{
+    background-color: #272727;
+    
+}
+.nicole-text{
+    color: #fff;
+    margin: 10px;
+}
 .wrapper{
     position: absolute;
     top: 0;
