started to create cards for each project and homework, starting importing the jpegs of each

--- a/src/components/resume/resume.css
+++ b/src/components/resume/resume.css
@@ -6,4 +6,8 @@
     background-size: cover; 
     height: 100vh;
 }
-
+.resume{
+    transition: all .5s ease-in-out;
+    transform: translateY(-30px);
+    
+}
