added a picture to go behind the about me section, added modals with more informaiton for each project or homework

--- a/src/components/navbar/navbar.css
+++ b/src/components/navbar/navbar.css
@@ -75,6 +75,7 @@
 .nav-links.open .nav-btns {
     transform: translateY(-5px);
     z-index:0;
-    color: white;
+    color: black;
+    margin: 5px;
 }
 
