added about me section, corrected images on cards

--- a/src/components/aboutMe/aboutme.css
+++ b/src/components/aboutMe/aboutme.css
@@ -6,3 +6,14 @@
     background-size: cover; 
     height: 100vh;
 }
+/* .text{
+    background-color: white;
+} */
+
+.aboutme-filter{
+    /* height: 100%; */
+    background-color:white;
+    opacity: 50%;
+    color: black;
+
+}
