--- a/src/components/resume/resume.css
+++ b/src/components/resume/resume.css
@@ -1,5 +1,5 @@
 .resume-container{
-    background-image: url("../../images/resume.jpg");
+    /* background-image: url("../../images/resume.jpg"); */
     background-attachment: fixed;
     background-repeat: no-repeat;
     background-position: 50% 50%;
