--- a/src/components/resume/resume.css
+++ b/src/components/resume/resume.css
@@ -1,11 +1,11 @@
 .resume-container{
-    /* background-image: url("../../images/resume.jpg"); */
+    /* background-image: url("../../images/resume.jpg");
     background-attachment: fixed;
     background-repeat: no-repeat;
     background-position: 50% 50%;
-    background-size: cover; 
-    height: 100vh;
-}
+    background-size: cover;  */
+    height: 135vh;
+} 
 .resume{
     transition: all .5s ease-in-out;
     transform: translateY(-30px);
