deleted some unecessary commented out code and added a media query

--- a/src/components/aboutMe/aboutme.css
+++ b/src/components/aboutMe/aboutme.css
@@ -16,16 +16,18 @@ p{
 } */
 
 .aboutme-filter{
-    /* height: 100%; */
     background-color:white;
     opacity: 80%;
-   
     position: absolute;
     top: 350px;
-    
-
 }
 .links{
     /* position: absolute; */
     top: 250px;
+}
+
+@media only screen and (max-width: 300px){
+    .aboutme-filter{
+        top: 20px;
+    }
 }
