--- a/src/components/aboutMe/aboutme.css
+++ b/src/components/aboutMe/aboutme.css
@@ -17,7 +17,7 @@ p{
 
 .aboutme-filter{
     background-color:white;
-    opacity: 80%;
+    opacity: 0.8;
     position: absolute;
     top: 350px;
 }
