--- a/src/components/portfolio/portfolio.css
+++ b/src/components/portfolio/portfolio.css
@@ -6,7 +6,20 @@ p{
     font-size: 15px;
 }
 
+
 .card{
 height: 400px;
 width: 500px;
 padding: 20px;}
+
+.tool-icon {
+border: 1px solid #ddd;
+border-radius: 4px;
+padding: 5px;
+height: 150px;
+
+}
+
+.tool-icon:hover {
+    box-shadow: 0 0 2px 1px rgba(0, 140, 186, 0.5); 
+}
