--- a/src/components/aboutMe/aboutme.css
+++ b/src/components/aboutMe/aboutme.css
@@ -3,13 +3,18 @@ p{
     color: black;
     padding: 20px;
 }
+
+ul{
+    list-style-type: none;
+}
 .aboutme-container{
     background-image: url("../../images/aboutme.jpg");
     background-attachment: fixed;
     background-repeat: no-repeat;
     background-position: 50% 50%;
     background-size: cover; 
-    height: 100vh;
+    height: 70vh;
+    width: 50%;
 }
 /* .text{
     background-color: white;
@@ -17,12 +22,20 @@ p{
 
 .aboutme-filter{
     background-color:white;
-    opacity: 0.8;
     position: absolute;
-    top: 350px;
+}
+
+.contact-icon{
+    margin: 10px;
+    
 }
 .links{
     /* position: absolute; */
     top: 250px;
 }
 
+#profile-picture{
+   height: 300px;
+    border-radius: 50%;
+    margin-bottom: 15px;
+}
