--- a/src/components/aboutMe/aboutme.css
+++ b/src/components/aboutMe/aboutme.css
@@ -7,7 +7,7 @@ p{
 ul{
     list-style-type: none;
 }
-.aboutme-container{
+/* .aboutme-container{
     background-image: url("../../images/aboutme.jpg");
     background-attachment: fixed;
     background-repeat: no-repeat;
@@ -15,27 +15,48 @@ ul{
     background-size: cover; 
     height: 70vh;
     width: 50%;
-}
+} */
 /* .text{
     background-color: white;
 } */
 
-.aboutme-filter{
+.aboutme-section{
     background-color:white;
     position: absolute;
+    height: 70vh;
 }
 
+.skills {
+    margin-left: 20px;
+    margin-top: -20px;
+}
 .contact-icon{
     margin: 10px;
-    
+
+}
+
+.skill-icon{
+    margin: 20px;
+    size: 20px;
 }
 .links{
     /* position: absolute; */
     top: 250px;
 }
 
+.text{
+    margin-top: 20px;
+    margin-bottom: 20px;
+    font-size: 12pt;
+}
+
 #profile-picture{
    height: 300px;
     border-radius: 50%;
     margin-bottom: 15px;
+}
+
+#aboutme {
+    border: black;
+    border-width: 10px;
 }
