changed navbar header text and height, changed css styling for navbar and about me section

--- a/src/components/aboutMe/aboutme.css
+++ b/src/components/aboutMe/aboutme.css
@@ -19,7 +19,9 @@ ul{
 /* .text{
     background-color: white;
 } */
-
+.aboutme{
+    height: 70vh;
+}
 .aboutme-section{
     background-color:white;
     position: absolute;
