--- a/src/components/navbar/navbar.css
+++ b/src/components/navbar/navbar.css
@@ -1,11 +1,15 @@
 
 .nicole{
     background-color: #272727;
+    height: 30vh;
     
+}
+.nicole-section{
+    margin-top:  90px;
 }
 .nicole-text{
     color: #fff;
-    margin: 10px;
+    /* margin-top: 40px; */
 }
 .wrapper{
     position: absolute;
@@ -75,7 +79,7 @@
 .nav-links.open .nav-btns {
     transform: translateY(-5px);
     z-index:0;
-    color: black;
+    color: white;
     margin: 5px;
 }
 
