--- a/src/components/portfolio/portfolio.css
+++ b/src/components/portfolio/portfolio.css
@@ -13,11 +13,11 @@ width: 500px;
 padding: 20px;}
 
 .tool-icon {
-border: 1px solid #ddd;
+/* border: 1px solid #ddd;
 border-radius: 4px;
 padding: 5px;
-height: 150px;
-
+height: 150px; */
+max-width: 100px;
 }
 
 .tool-icon:hover {
