added iconify npm package, added materialize css inconify icon to portfolio

--- a/src/components/portfolio/portfolio.css
+++ b/src/components/portfolio/portfolio.css
@@ -23,3 +23,8 @@ max-width: 100px;
 .tool-icon:hover {
     box-shadow: 0 0 2px 1px rgba(0, 140, 186, 0.5); 
 }
+
+.iconify {
+    width: 24px; 
+    height: 24px;
+}
