--- a/src/components/aboutMe/aboutme.css
+++ b/src/components/aboutMe/aboutme.css
@@ -31,6 +31,7 @@ ul{
 .skills {
     margin-left: 20px;
     margin-top: -20px;
+
 }
 .contact-icon{
     margin: 10px;
@@ -56,6 +57,7 @@ ul{
     height: 300px;
     border-radius: 50%;
     margin-bottom: 15px;
+    margin-left: 230px ;
 }
 
 #aboutme {
