changed size of icons on portfolio, moved profile picture center, css styling for about me and porfolio

--- a/src/components/aboutMe/aboutme.css
+++ b/src/components/aboutMe/aboutme.css
@@ -16,9 +16,9 @@ ul{
     height: 70vh;
     width: 50%;
 } */
-/* .text{
-    background-color: white;
-} */
+.text{
+    margin-right: 30px;
+}
 .aboutme{
     height: 70vh;
 }
