--- a/src/components/aboutMe/aboutme.css
+++ b/src/components/aboutMe/aboutme.css
@@ -6,6 +6,8 @@ p{
 
 ul{
     list-style-type: none;
+    margin: 0;
+    padding: 0;
 }
 
 .aboutme-picture{
@@ -22,8 +24,7 @@ ul{
 }
 
 .text{
-    margin-right: 100px;
-    margin-left: 70px;
+   
     font-size: 12pt;
 }
 
@@ -37,10 +38,11 @@ ul{
 }
 
 #profile-picture{
-    height: 300px;
+    height: 350px; 
     border-radius: 50%;
-    margin-left: 100px;
-    margin-top: 50px;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
     
 }
 
