--- a/src/components/portfolio/portfolio.css
+++ b/src/components/portfolio/portfolio.css
@@ -1,25 +1,12 @@
-body{
-    background-color: #eee;
+.cards {
+margin: 30px;
 }
-
-p{
-    font-size: 15px;
+.portfolio {
+    margin: 100px;
 }
-
-
-.card{
-height: 400px;
-width: 500px;
-padding: 20px;}
-
-.tool-icon {
-/* border: 1px solid #ddd;
-border-radius: 4px;
-padding: 5px;
-height: 150px; */
-max-width: 100px;
+.tech-icons{
+    margin: 8px;
 }
-
 .tool-icon:hover {
     box-shadow: 0 0 2px 1px rgba(0, 140, 186, 0.5); 
 }
@@ -32,9 +19,7 @@ max-width: 100px;
 .ant-space{
     margin: 20px;
 }
-.portfolio-items{
-    margin: 20px;
-}
+
 
 .tech-icons{
     margin: 20px;
