--- a/src/components/portfolio/portfolio.css
+++ b/src/components/portfolio/portfolio.css
@@ -1,5 +1,8 @@
 .cards {
-margin: 30px;
+    margin: 55px;
+   
+    height: 90vh;
+    justify-content: space-evenly;
 }
 .portfolio {
     margin: 100px;
@@ -7,20 +10,4 @@ margin: 30px;
 .tech-icons{
     margin: 8px;
 }
-.tool-icon:hover {
-    box-shadow: 0 0 2px 1px rgba(0, 140, 186, 0.5); 
-}
 
-.iconify {
-    width: 24px; 
-    height: 24px;
-}
-
-.ant-space{
-    margin: 20px;
-}
-
-
-.tech-icons{
-    margin: 20px;
-}
