--- a/src/components/portfolio/portfolio.css
+++ b/src/components/portfolio/portfolio.css
@@ -1,7 +1,7 @@
 .cards {
     margin: 55px;
    
-    height: 90vh;
+    height: 70vh;
     justify-content: space-evenly;
 }
 .portfolio {
@@ -11,3 +11,6 @@
     margin: 8px;
 }
 
+.relocate {
+    size: 50px;
+}
