--- a/src/components/aboutMe/aboutme.css
+++ b/src/components/aboutMe/aboutme.css
@@ -15,6 +15,9 @@ h2{
     padding-top: 15px;
 }
 
+/* .aboutme {
+    display: flex;
+} */
 .aboutme-picture{
     background-color: #f0e4e4;
     margin-top: 70px;
@@ -54,4 +57,10 @@ h2{
     margin-right: auto;
     
 }
+
+@media only screen and (max-width: 500px) {
+    .buffer{
+        margin:50px;
+    }
+    }
 
