--- a/src/components/navbar/navbar.css
+++ b/src/components/navbar/navbar.css
@@ -2,6 +2,13 @@ h1{
     padding-left: 70px;
     color: #fff;
 }
+
+.navbar {
+    overflow: hidden;
+    position: fixed;
+    top: 0;
+    width: 100%;
+}
 .nicole{
     background-color: #47798c;
     height: 30vh;
