menu is now sticking to the top of the page and it and navbar are staying in front of body, margins for about me are correct

--- a/src/components/aboutMe/aboutme.css
+++ b/src/components/aboutMe/aboutme.css
@@ -15,9 +15,9 @@ h2{
     padding-top: 15px;
 }
 
-/* .aboutme {
-    display: flex;
-} */
+.aboutme-container {
+    margin-top: 150px;
+}
 .aboutme-picture{
     background-color: #f0e4e4;
     margin-top: 70px;
