--- a/src/components/navbar/navbar.css
+++ b/src/components/navbar/navbar.css
@@ -13,6 +13,11 @@ h1{
     z-index: 1;
     background-color: #47798c;
 }
+.Navbar-title{
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+}
 .nicole{
     top: 0;
     right: 0;
