--- a/src/components/navbar/navbar.css
+++ b/src/components/navbar/navbar.css
@@ -1,11 +1,4 @@
-h1{
-    padding-left: 70px;
-    color: #fff;
-    word-wrap: break-word;
-
-}
-
-.navbar {
+.Navbar {
     overflow: hidden;
     position: fixed;
     top: 0;
@@ -13,28 +6,26 @@ h1{
     z-index: 1;
     background-color: #47798c;
 }
+
 .Navbar-title{
     list-style-type: none;
     margin: 0;
     padding: 0;
 }
-.nicole{
-    top: 0;
-    right: 0;
-    margin-bottom: 0px;
-    
-}
-.nicole-section{
-    margin-top:  30px;
-    padding-bottom: 35px;
-}
-.nicole-text{
+
+.Navbar-name{
     margin-top: 15px;
     margin-bottom: 10px;
+    padding-left: 70px;
+    color: #fff;
+    word-wrap: break-word;
 }
 
-.title{
+.Navbar-description{
     margin-top: 0px;
+    padding-left: 70px;
+    color: #fff;
+    word-wrap: break-word;
 }
 
 .wrapper{
@@ -44,6 +35,7 @@ h1{
     z-index:1;
     padding-top: 0px;
 }
+
 .menu-btn{
     position: relative;
     display: flex;
@@ -55,6 +47,7 @@ h1{
     transition: all .5 ease-in-out;
     /* border: 3px solid #fff; */
 }
+
 .menu-btn_burger{
     width: 50px;
     height: 6px;
@@ -63,6 +56,7 @@ h1{
     box-shadow: 0 2px 5px darkgray;
     transition: all .5s ease-in-out;
 }
+
 .menu-btn_burger::before,
 .menu-btn_burger::after{
     content: '';
@@ -73,9 +67,11 @@ h1{
     border-radius: 5px;
     transition: all .5s ease-in-out;
 }
+
 .menu-btn_burger::before {
     transform: translateY(-16px);
 }
+
 .menu-btn_burger::after {
     transform: translateY(16px);
 }
@@ -85,9 +81,11 @@ h1{
     transform: scaleZ(-50px);
     background: transparent;
 }
+
 .menu-btn.open .menu-btn_burger::before {
     transform: rotate(45deg)
 }
+
 .menu-btn.open .menu-btn_burger::after {
     transform: rotate(-45deg)
 }
