added necessaryclasses to portfolio.css

--- a/src/components/portfolio/portfolio.css
+++ b/src/components/portfolio/portfolio.css
@@ -1,3 +1,39 @@
+.Portfolio-card{
+    background-color: blue;
+    width: 300px;
+    padding: 60px;
+    margin-right: 0px
+}
+
+.Portfolio-name{
+
+}
+
+.Portfolio-image{
+
+}
+
+.Portfolio-role{
+
+}
+
+.Portfolio-tech{
+
+}
+
+.Portfolio-description{
+
+}
+
+.Portfolio-github{
+
+}
+
+.Portfolio-app{
+
+}
+
+
 .cards {
     margin: 55px;
    
