added css to the portfolio cards

--- a/src/components/portfolio_card/Portfolio_card.css
+++ b/src/components/portfolio_card/Portfolio_card.css
@@ -3,6 +3,7 @@
     width: 300px;
     padding: 60px;
     margin-right: 0px;
+    margin-bottom: 2rem;
     box-shadow: 7px 10px 12px -5px rgba(0,0,0, 0.56);
 }
 
