--- a/src/components/portfolio_card/Portfolio_card.css
+++ b/src/components/portfolio_card/Portfolio_card.css
@@ -1,10 +1,12 @@
 .Portfolio-card{
     background-color: grey;
-    width: 300px;
+    width: 400px;
     padding: 60px;
     margin-right: 0px;
     margin-bottom: 2rem;
     box-shadow: 7px 10px 12px -5px rgba(0,0,0, 0.56);
+    text-align: center;
+    border-radius: 3px;
 }
 
 .Portfolio-name{
@@ -14,7 +16,9 @@
 }
 
 .Portfolio-image{
-
+    display: flex;
+    justify-content: center;
+    background-color: #eceff1;
 }
 
 .Portfolio-role{
