--- a/src/components/portfolio/portfolio.css
+++ b/src/components/portfolio/portfolio.css
@@ -7,3 +7,9 @@
     justify-content: space-evenly;
     flex-wrap: wrap;
 }
+
+.Portfolio-tech-icons{
+    padding: 3px;
+    /* justify-content: space-evenly; */
+    /* flex-wrap: wrap; */
+}
