added zoom on pcitures in portfolio

--- a/src/components/portfolio_card/Portfolio_card.css
+++ b/src/components/portfolio_card/Portfolio_card.css
@@ -22,6 +22,14 @@
     padding-bottom: 10px;
 }
 
+.Portfolio-card img{
+    transition: all ease 500ms;
+}
+
+.Portfolio-card img:hover {
+    transform: scale(1.25);
+}
+
 .Portfolio-role{
 
 }
