--- a/src/components/portfolio_card/Portfolio_card.css
+++ b/src/components/portfolio_card/Portfolio_card.css
@@ -24,7 +24,7 @@
     justify-content: center;
     background-color: #eceff1;
     padding-bottom: 10px;
-    backface-visibility: hidden
+    /* backface-visibility: hidden */
 }
 
 .Portfolio-middle{
